--- a/Login_form.html
+++ b/Login_form.html
@@ -42,7 +42,7 @@ background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
               </div>
             </div>
             <div class="form-group row p-2">
-                <label for="inputPassword" class="col-sm-8 col-form-label">Dont have an account! <a href="signup.html">Signup</a></label>
+                <label for="inputPassword" class="col-sm-8 col-form-label">Dont have an account! <a href="https://vipink68.github.io/webdev/Signup_form.html">Signup</a></label>
                 <div class="col-sm-4">
                   <input type="submit" id="submit-btn" class="btn btn-primary form-control" value="Login">
                 </div>
